# easylib

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  meson.build
.github/workflows/: lint.yaml  test.yaml
interpreter/: Makefile  array.c  array.h  boolean.c  boolean.h  common.h  cstr.h  ez_log.h  global.h  main.c  nothing.c  nothing.h  number.c  number.h  object.c  object.h  string.c  string.h  table.c  table.h  test_array.c  test_ez_log.c  test_object.c  test_string.c  test_table.c
src/: easy_boolean.c  easy_boolean.h  easy_common.c  easy_common.h  easy_equal.c  easy_equal.h  easy_error.c  easy_error.h  easy_hash.c  easy_hash.h  easy_integer.c  easy_integer.h  easy_lib.c  easy_lib.h  easy_list.c  easy_list.h  easy_nothing.c  easy_nothing.h  easy_table.c  easy_table.h  easy_table_item.h  easy_text.c  easy_text.h  easyboolean.c  easyboolean.h  easycommon.c  easycommon.h  easyhash.c  easyhash.h  easyinteger.c  easyinteger.h  easylib.c  easylib.h  easylist.c  easylist.h  easynothing.c  easynothing.h  easytable.c  easytable.h  easytext.c  (+3 more)
src/common/: colours.h  common.h  easy_logger.h  easy_test.c  easy_test.h  easy_unused.h  easylogger.h  easytest.c  easytest.h  easyunused.h  logger.h  memory.h  meson.build
src/common/include/common/: memory.h  status.h
src/deprecated/: deprecated_json.h  deprecated_templatized_hash_table.c
src/test/: meson.build  test.h
src/test/include/test/: test.h
src/type/: ez_number.c  meson.build
src/type/include/type/: ez_number.h  ez_object.h
test/common/: logger_test.c  memory_test.c  meson.build
